src/objects/Hardware_Software__c.object
<CustomObject>
    <description>Object utilized to create hardware/software tracking information for customers</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Hardware &amp; Software</relationshipLabel>
        <relationshipName>Hardwares_Softwares</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Antivirus_Software__c</fullName>
        <inlineHelpText>IMC - Use for network clients in the department</inlineHelpText>
        <label>Anti-Virus Software</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_WMP__c</fullName>
        <label>Assigned To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enter appropriate employee list here.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Software_WMP__c</fullName>
        <label>Backup Software</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Black_Box_Version__c</fullName>
        <label>Black Box Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7.8</fullName>
                </value>
                <value>
                    <fullName>7.1</fullName>
                    <default>true</default>
                    <label>7.1</label>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blocked_WMP__c</fullName>
        <label>Blocked</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIM_Additional_Information__c</fullName>
        <label>CIM Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIM_DR_Software__c</fullName>
        <label>CIM DR Software</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIM_DR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIM DR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIM_Software_Expiration_Date__c</fullName>
        <label>CIM Software Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIM_Software_Version_Patch__c</fullName>
        <label>CIM Software Version Patch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>enter versions</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIM_Software_Version__c</fullName>
        <label>CIM Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1.4</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>1.2</fullName>
                </value>
                <value>
                    <fullName>1.1</fullName>
                </value>
                <value>
                    <fullName>enter versions</fullName>
                    <label>Enter versions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIM_Test_Additional_Information__c</fullName>
        <label>CIM Test Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIM_Test_Software_Expiration_Date__c</fullName>
        <label>CIM Test Software Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIM_Test_Software_Version_Patch__c</fullName>
        <label>CIM Test Software Version Patch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIM_Test_Software_Version__c</fullName>
        <label>CIM Test Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1.4</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>1.2</fullName>
                </value>
                <value>
                    <fullName>1.1</fullName>
                </value>
                <value>
                    <fullName>enter versions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIM_Training_Additional_Information__c</fullName>
        <label>CIM Training Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIM_Training_Software_Expiration_Date__c</fullName>
        <label>CIM Training Software Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CIM_Training_Software_Version_Patch__c</fullName>
        <label>CIM Training Software Version Patch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIM_Training_Software_Version__c</fullName>
        <label>CIM Training Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>1.4</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>1.2</fullName>
                </value>
                <value>
                    <fullName>1.1</fullName>
                </value>
                <value>
                    <fullName>enter versions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPU__c</fullName>
        <label>CPU</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Certificate_Expiration_Date__c</fullName>
        <description>RMS Certificate Expiration Date</description>
        <label>RMS Certificate Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Antivirus_Software_WMP__c</fullName>
        <inlineHelpText>IMC - Use this field for Mobile Laptop Anti-Virus</inlineHelpText>
        <label>Client&apos;s Anti-Virus Software</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clients_Operating_System_WMP__c</fullName>
        <label>Client&apos;s Operating System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vista-32 bit</fullName>
                </value>
                <value>
                    <fullName>Vista-64 bit</fullName>
                </value>
                <value>
                    <fullName>Win 7-32 bit</fullName>
                </value>
                <value>
                    <fullName>Win 7-64 bit</fullName>
                </value>
                <value>
                    <fullName>Windows 2000</fullName>
                </value>
                <value>
                    <fullName>Windows 8</fullName>
                </value>
                <value>
                    <fullName>Windows-32 bit</fullName>
                </value>
                <value>
                    <fullName>Windows-64 bit</fullName>
                </value>
                <value>
                    <fullName>Windows XP-32 bit</fullName>
                </value>
                <value>
                    <fullName>Windows XP-64 bit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Pervasive_Version__c</fullName>
        <label>Current Pervasive Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_SQL_Version_WMP__c</fullName>
        <label>Current SQL Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SQL 2014</fullName>
                </value>
                <value>
                    <fullName>SQL 2014 Express</fullName>
                </value>
                <value>
                    <fullName>SQL 2012</fullName>
                </value>
                <value>
                    <fullName>SQL 2012 Express</fullName>
                </value>
                <value>
                    <fullName>SQL 2008</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Express</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Express R2</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 R2</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 RTM</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 SP1</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 SP2</fullName>
                </value>
                <value>
                    <fullName>SQL 2005</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Express</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 SP1</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 SP2</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 SP3</fullName>
                </value>
                <value>
                    <fullName>SQL 2000</fullName>
                </value>
                <value>
                    <fullName>MSDE 7.0</fullName>
                </value>
                <value>
                    <fullName>MSDE 2000</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0</fullName>
                </value>
                <value>
                    <fullName>SQL 6.5</fullName>
                </value>
                <value>
                    <fullName>SQL Express</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Software_Version_WMP__c</fullName>
        <label>Current Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>1.6</fullName>
                </value>
                <value>
                    <fullName>46.17.76</fullName>
                </value>
                <value>
                    <fullName>Billing 5.7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Interfaces__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Interfaces?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <formula>Account_Name__r.EMS_Customer_Number_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Mobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DR Mobile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DR?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Defect_Type_WMP__c</fullName>
        <label>Defect Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_VisiNet_Browser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External VisiNet Browser?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FBR_DR_Software__c</fullName>
        <label>FBR DR Software</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_DR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FBR DR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FBR_Software_Version_Patch__c</fullName>
        <label>FBR Software Version Patch</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Test_Additional_Information__c</fullName>
        <label>FBR Test Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FBR_Test_OS_Service_Pack__c</fullName>
        <label>FBR Test OS Service Pack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FBR_Test_OS__c</fullName>
        <label>FBR Test OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows NT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FBR_Test_SQL_Version__c</fullName>
        <label>FBR Test SQL Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SQL 2012 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2005 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Std</fullName>
                </value>
                <value>
                    <fullName>SQL 7.0 Ent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FBR_Test_Software_Version_Patch__c</fullName>
        <label>FBR Test Software Version Patch</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Test_Software_Version__c</fullName>
        <label>FBR Test Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FBR 4.16 C</fullName>
                    <label>4.16 C</label>
                </value>
                <value>
                    <fullName>FBR 4.15 C</fullName>
                    <label>4.15 C</label>
                </value>
                <value>
                    <fullName>FBR 4.14 C</fullName>
                    <label>4.14 C</label>
                </value>
                <value>
                    <fullName>FBR 4.13 C</fullName>
                    <label>4.13 C</label>
                </value>
                <value>
                    <fullName>FBR 4.12.1 C</fullName>
                    <label>4.12.1 C</label>
                </value>
                <value>
                    <fullName>FBR 4.12 C</fullName>
                    <label>4.12 C</label>
                </value>
                <value>
                    <fullName>FBR 4.11 C</fullName>
                    <label>4.11 C</label>
                </value>
                <value>
                    <fullName>FBR 4.10 C</fullName>
                    <label>4.10 C</label>
                </value>
                <value>
                    <fullName>FBR 4.9 W</fullName>
                    <label>4.9 W</label>
                </value>
                <value>
                    <fullName>FBR 4.9 C</fullName>
                    <label>4.9 C</label>
                </value>
                <value>
                    <fullName>FBR 4.8.1 W</fullName>
                    <label>4.8.1 W</label>
                </value>
                <value>
                    <fullName>FBR 4.8 C</fullName>
                    <label>4.8 C</label>
                </value>
                <value>
                    <fullName>FBR 4.8 W</fullName>
                    <label>4.8 W</label>
                </value>
                <value>
                    <fullName>FBR 4.7.2 C</fullName>
                    <label>4.7.2 C</label>
                </value>
                <value>
                    <fullName>FBR 4.7.2 W</fullName>
                    <label>4.7.2 W</label>
                </value>
                <value>
                    <fullName>FBR 4.7.1 C</fullName>
                    <label>4.7.1 C</label>
                </value>
                <value>
                    <fullName>FBR 4.7.1 W</fullName>
                    <label>4.7.1 W</label>
                </value>
                <value>
                    <fullName>FBR 4.7.0</fullName>
                    <label>4.7.0</label>
                </value>
                <value>
                    <fullName>FBR 4.6.3</fullName>
                    <label>4.6.3</label>
                </value>
                <value>
                    <fullName>FBR 4.6.2</fullName>
                    <label>4.6.2</label>
                </value>
                <value>
                    <fullName>FBR 4.6.1</fullName>
                    <label>4.6.1</label>
                </value>
                <value>
                    <fullName>FBR 4.6.0</fullName>
                    <label>4.6.0</label>
                </value>
                <value>
                    <fullName>FBR 4.5.4</fullName>
                    <label>4.5.4</label>
                </value>
                <value>
                    <fullName>FBR 4.5.3</fullName>
                    <label>4.5.3</label>
                </value>
                <value>
                    <fullName>FBR 4.5.2</fullName>
                    <label>4.5.2</label>
                </value>
                <value>
                    <fullName>FBR 4.5.1</fullName>
                    <label>4.5.1</label>
                </value>
                <value>
                    <fullName>FBR 4.5.0</fullName>
                    <label>4.5.0</label>
                </value>
                <value>
                    <fullName>FBR 4.4.3</fullName>
                    <label>4.4.3</label>
                </value>
                <value>
                    <fullName>FBR 4.4.2</fullName>
                    <label>4.4.2</label>
                </value>
                <value>
                    <fullName>FBR 4.4.1</fullName>
                    <label>4.4.1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FBR_Training_Additional_Information__c</fullName>
        <label>FBR Training Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FBR_Training_OS_Service_Pack__c</fullName>
        <label>FBR Training OS Service Pack</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows NT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FBR_Training_OS__c</fullName>
        <label>FBR Training OS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Windows 2012 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2012 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2008 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2003 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Std</fullName>
                </value>
                <value>
                    <fullName>Windows 2000 Ent</fullName>
                </value>
                <value>
                    <fullName>Windows NT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FBR_Training_SQL_Version__c</fullName>
        <label>FBR Training SQL Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FBR_Training_Software_Version_Patch__c</fullName>
        <label>FBR Training Software Version Patch</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Training_Software_Version__c</fullName>
        <label>FBR Training Software Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FBR 4.16 C</fullName>
                    <label>4.16 C</label>
                </value>
                <value>
                    <fullName>FBR 4.15 C</fullName>
                    <label>4.15 C</label>
                </value>
                <value>
                    <fullName>FBR 4.14 C</fullName>
                    <label>4.14 C</label>
                </value>
                <value>
                    <fullName>FBR 4.13 C</fullName>
                    <label>4.13 C</label>
                </value>
                <value>
                    <fullName>FBR 4.12.1 C</fullName>
                    <label>4.12.1 C</label>
                </value>
                <value>
                    <fullName>FBR 4.12 C</fullName>
                    <label>4.12 C</label>
                </value>
                <value>
                    <fullName>FBR 4.11 C</fullName>
                    <label>4.11 C</label>
                </value>
                <value>
                    <fullName>FBR 4.10 C</fullName>
                    <label>4.10 C</label>
                </value>
                <value>
                    <fullName>FBR 4.9 C</fullName>
                    <label>4.9 C</label>
                </value>
                <value>
                    <fullName>FBR 4.9 W</fullName>
                    <label>4.9 W</label>
                </value>
                <value>
                    <fullName>FBR 4.8.1 W</fullName>
                    <label>4.8.1 W</label>
                </value>
                <value>
                    <fullName>FBR 4.8 C</fullName>
                    <label>4.8 C</label>
                </value>
                <value>
                    <fullName>FBR 4.8 W</fullName>
                    <label>4.8 W</label>
                </value>
                <value>
                    <fullName>FBR 4.7.2 C</fullName>
                    <label>4.7.2 C</label>
                </value>
                <value>
                    <fullName>FBR 4.7.2 W</fullName>
                    <label>4.7.2 W</label>
                </value>
                <value>
                    <fullName>FBR 4.7.1 C</fullName>
                    <label>4.7.1 C</label>
                </value>
                <value>
                    <fullName>FBR 4.7.1 W</fullName>
                    <label>4.7.1 W</label>
                </value>
                <value>
                    <fullName>FBR 4.7.0</fullName>
                    <label>4.7.0</label>
                </value>
                <value>
                    <fullName>FBR 4.6.3</fullName>
                    <label>4.6.3</label>
                </value>
                <value>
                    <fullName>FBR 4.6.2</fullName>
                    <label>4.6.2</label>
                </value>
                <value>
                    <fullName>FBR 4.6.1</fullName>
                    <label>4.6.1</label>
                </value>
                <value>
                    <fullName>FBR 4.6.0</fullName>
                    <label>4.6.0</label>
                </value>
                <value>
                    <fullName>FBR 4.5.4</fullName>
                    <label>4.5.4</label>
                </value>
                <value>
                    <fullName>FBR 4.5.3</fullName>
                    <label>4.5.3</label>
                </value>
                <value>
                    <fullName>FBR 4.5.2</fullName>
                    <label>4.5.2</label>
                </value>
                <value>
                    <fullName>FBR 4.5.1</fullName>
                    <label>4.5.1</label>
                </value>
                <value>
                    <fullName>FBR 4.5.0</fullName>
                    <label>4.5.0</label>
                </value>
                <value>
                    <fullName>FBR 4.4.3</fullName>
                    <label>4.4.3</label>
                </value>
                <value>
                    <fullName>FBR 4.4.2</fullName>
                    <label>4.4.2</label>
                </value>
                <value>
                    <fullName>FBR 4.4.1</fullName>
                    <label>4.4.1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIS_Framework_Test_Version__c</fullName>
        <label>GIS Framework Test Version:</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.0</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIS_Framework_Training_Version__c</fullName>
        <label>GIS Framework  Training Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5.0</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>1.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>